Update index.html dataset link

--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
                   </a>
               </span>
               <!-- Dataset Link. -->
-              <!-- <span class="link-block">
-                <a href=""
+              <span class="link-block">
+                <a href="https://github.com/ChiWeiHsiao/ref-ldm?tab=readme-ov-file#ffhq-ref-dataset"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
                   </a>
-              </span> -->
+              </span>
             </div>
 
           </div>
